--- a/myapp/templates/homepage.html
+++ b/myapp/templates/homepage.html
@@ -1,41 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Home Page</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.css">
+
 </head>
 <body>
-     {% load custom_tags %}
-    <div>
-
-    <div>
-    <ol>
-    {% for i in q_list %}
-
-        <li>
-            <div>
-                <h4>{{  i.question_text }}</h4>
-
-            </div>
-
-                <ul>
-
-                        {% for j in a_list|at_index:i.id %}
-                            <li>
-                                <p>{{ j.answer_text }}</p>
-                            </li>
-                        {% empty %}
-                            <li>
-                                <p>Be First to Answer!</p>
-                            </li>
-                        {% endfor %}
-
-                </ul>
-
-        </li>
-    {% endfor %}
-    </ol>
-    </div>
+<div id="sidebar">
+    {% block sidebar %}
+            {% include 'navbar.html' %}
+    {% endblock %}
 </div>
+
+<br/><br/>
+
+{% block left-sidebar %}
+
+{% endblock %}
+
+{% block middle-content %}
+    {% include 'middle_content.html' %}
+{% endblock middle-content %}
+
+{% block right-sidebar %}
+{% endblock right-sidebar%}
 
 </body>
 </html>
