--- a/myapp/templates/navbar.html
+++ b/myapp/templates/navbar.html
@@ -26,15 +26,18 @@ crossorigin="anonymous"
         <a class="nav-link" href="#"></a>
       </li>
     </ul>
-      <form action="{% url 'QCreateForm' %}" method="get">
-          <button class="btn btn-secondary my-5 mr-sm-5 my-sm-0">
-                    Ask Question
-          </button>
-      </form>
+
+    <form action="{% url 'QCreateForm' %}" method="get" class="form-inline my-2 my-lg-0">
+        <button class="btn btn-secondary my-5 mr-sm-5 my-sm-0">
+           Ask Question
+        </button>
+    </form>
+
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" placeholder="Search" type="text">
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
     </form>
+
   </div>
 </nav>
 {% endblock %}
