Minor Changes - Title in question model changed from TextInput to TextArea - Removed pub_date field in models. - added few css elements

--- a/myapp/templates/homepage.html
+++ b/myapp/templates/homepage.html
@@ -2,10 +2,10 @@
 <head>
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.css">
-
+    <title>webpage</title>
 </head>
 <body>
-<div id="sidebar">
+<div id="sidebar" style="display:block;position:fixed;top:0;left:0;width:100%;">
     {% block sidebar %}
             {% include 'navbar.html' %}
     {% endblock %}
